# running-events-etl-pipeline-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
sql/: 001_schema.sql  002_postgis.sql  003_dedup.sql  004_alias.sql  005_geocode.sql  006_country.sql  007_changes.sql  008_search.sql  009_location_precision.sql  010_parse_version.sql
src/corridas_etl/: __init__.py  config.py  db.py  models.py
src/corridas_etl/connectors/: ativo.py  base.py  exemplo_ativo.py  iguanasports.py  registry.py  runningland.py  ticketsports.py  yescom.py
src/corridas_etl/pipeline/: daily.py  dedup.py  enrich.py  notify.py  quality.py  run.py
src/corridas_etl/resolution/: matcher.py
src/corridas_etl/serving/: search.py
src/corridas_etl/storage/: raw.py
src/corridas_etl/utils/: distances.py  geo.py  render.py  text.py
tests/: test_ativo.py  test_canonical.py  test_distances.py  test_iguanasports.py  test_incremental.py  test_matcher.py  test_notify.py  test_runningland.py  test_search.py  test_ticketsports.py  test_yescom.py
