[project]
name = "corridas-etl"
version = "0.1.0"
description = "Pipeline ETL de agregacao de eventos de corrida de rua"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "selectolax>=0.3.21",       # parsing HTML rapido (fallback ao BeautifulSoup)
    "psycopg[binary]>=3.1",     # driver Postgres
    "python-dateutil>=2.9",     # parsing de datas PT-BR
    "unidecode>=1.3",           # normalizacao de acentos p/ matching e slug
    "python-dotenv>=1.0",
    "rapidfuzz>=3.6",           # fuzzy matching p/ entity resolution
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Instalado sob demanda quando um conector precisar renderizar JS:
#   pip install "corridas-etl[browser]"  &&  playwright install chromium
browser = [
    "playwright>=1.44",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
